Spell all instances of 'prerequisites' correctly and consistently.

--- a/how-to/template-howto.adoc
+++ b/how-to/template-howto.adoc
@@ -11,11 +11,11 @@ include::../adoc-parameters.txt[]
 {description}
 
 == Before you start
-// Delete this section if your readers can dive straight into the lesson without requiring any pre-requisite knowledge.
-Make sure you meet the following pre-requisites before starting the how-to steps:
+// Delete this section if your readers can dive straight into the lesson without requiring any prerequisite knowledge.
+Make sure you meet the following prerequisites before starting the how-to steps:
 
-* Pre-requisite one
-* Pre-requisite two
+* Prerequisite one
+* Prerequisite two
 * etc
 
 == Step-by-step guide
