--- a/how-to/template-howto.adoc
+++ b/how-to/template-howto.adoc
@@ -20,26 +20,22 @@ Make sure you meet the following prerequisites before starting the how-to steps:
 
 == Step-by-step guide
 
-// If your how-to is simple (it doesn't contain screenshots or code samples) you can use an ordered list for your procedure. Otherwise use the step table.
+=== Descriptive title
 
-[cols="a,a,a" options="header,autowidth"]
-|===
-|Step
-|Task
-|Screenshot or example
+// When an image, such as a screenshot, is quicker to interpret than descriptive text, put the screenshot first, otherwise lead with the text.
 
-|1
-|Lead-in sentence for an ordered list:
+image::https://upload.wikimedia.org/wikipedia/commons/3/35/Tux.svg[Tux,250,350]
+
+Lead-in sentence for an ordered list:
 
 . Step 1
 . Step 2
 . Step 3
 
-|image::https://upload.wikimedia.org/wikipedia/commons/3/35/Tux.svg[Tux,250,350]
+=== Descriptive title for code snippet
 
-|2
-|Run the `apt` command to install the Asciidoctor package and check the version.
-|
+Lead in sentence explaining the code snippet. E.g.: Run the `apt` command to install the Asciidoctor package and check the version.
+
 [source]
 ----
 $ sudo apt install asciidoctor
@@ -47,5 +43,3 @@ $ sudo apt install asciidoctor
 $ asciidoctor --version
 Asciidoctor 1.5.6.2 [https://asciidoctor.org]
 ----
-
-|===
