--- a/reference/template-reference.adoc
+++ b/reference/template-reference.adoc
@@ -21,7 +21,7 @@ Check out https://asciidoctor.org/docs/asciidoc-syntax-quick-reference/ if you g
 
 
 
-.Example Parameter Reference Template
+.Example parameter reference template
 [cols="a,a,a,a" options="header,autowidth"]
 |===
 |Name
@@ -45,11 +45,11 @@ Check out https://asciidoctor.org/docs/asciidoc-syntax-quick-reference/ if you g
 |
 |===
 
-== Field Reference
+== Field reference
 
 image::https://docs.oracle.com/cloud/latest/marketingcs_gs/OMCAA/Resources/Images/Forms/kbf2.x1.jpg[Tux,250,350]
 
-.Example Field Name Reference Template
+.Example field name reference template
 [cols="a,a,a,a" options="header,autowidth"]
 |===
 |Name
@@ -76,7 +76,7 @@ image::https://docs.oracle.com/cloud/latest/marketingcs_gs/OMCAA/Resources/Image
 
 image::https://docs.oracle.com/cloud/latest/marketingcs_gs/OMCAA/Resources/Images/Forms/kbf2.x1.jpg[Tux,250,350]
 
-.Example Nested Table
+.Example nested table
 [cols="1,2a"]
 |===
 | Col 1 | Col 2
